<resources>
    <string name="app_name">Quick ID</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="want_logout_text">Are you sure you want to Logout ?</string>

    <string name="menu_home">Home</string>
    <string name="menu_logout">Logout</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="cancel">Cancel</string>
    <string name="yes">Yes</string>
    <string name="prompt_email">Email</string>
    <string name="password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Username should not be empty</string>
    <string name="invalid_password">Password should not be empty</string>
    <string name="login_failed">"Login failed"</string>
    <string name="username">"UserName"</string>
    <string name="forgot_password">"Forgot Password"</string>
    <string name="change_password">"Change Password"</string>
    <string name="login">"log In"</string>
    <string name="wait">"Please wait … "</string>
    <string name="annotate">Annotate</string>
    <string name="save_image">Save Image</string>
    <string name="measure">Measure</string>
    <string name="full_screen">Full Screen</string>
    <string name="floating_action_button">Floating Action button</string>
    <string name="login_inf_text">To login to system just don\'t leave empty field below :</string>


</resources>