<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    android:background="@color/gray_400"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".login.LoginActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true">


        <androidx.appcompat.widget.LinearLayoutCompat

            android:id="@+id/llLoginForm"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:textStyle="italic"
                android:textSize="16sp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/login_inf_text"
                android:textAlignment="center" />


            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/logo"
                android:layout_width="match_parent"
                android:layout_height="120dp"
                android:src="@drawable/ic_baseline_login_24" />
            <!--                android:layout_marginTop="10dp"-->


            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp">

                <androidx.appcompat.widget.LinearLayoutCompat
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <androidx.appcompat.widget.LinearLayoutCompat
                        android:id="@+id/llUsername"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="12dp"
                        android:layout_marginEnd="12dp"
                        android:orientation="horizontal">

                        <androidx.appcompat.widget.AppCompatImageView
                            android:layout_width="24dp"
                            android:layout_height="24dp"
                            android:layout_gravity="center_vertical"
                            android:layout_marginLeft="8dp"
                            android:layout_marginRight="8dp"
                            android:scaleType="centerInside"
                            app:srcCompat="@drawable/person" />

                        <com.google.android.material.textfield.TextInputLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:textColorHint="@color/gray_400"
                            app:hintTextColor="@color/white">

                            <androidx.appcompat.widget.AppCompatEditText
                                android:id="@+id/etUsername"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:cursorVisible="true"
                                android:focusable="true"
                                android:focusableInTouchMode="true"
                                android:hint="@string/username"
                                android:inputType="text"
                                android:text=""
                                android:textColor="@color/black"
                                android:textSize="16sp"
                                android:windowSoftInputMode="stateAlwaysHidden" />

                        </com.google.android.material.textfield.TextInputLayout>


                    </androidx.appcompat.widget.LinearLayoutCompat>

                    <LinearLayout
                        android:id="@+id/llPassword"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="12dp"
                        android:layout_marginTop="12dp"
                        android:layout_marginEnd="12dp"
                        android:orientation="horizontal">

                        <androidx.appcompat.widget.AppCompatImageView
                            android:layout_width="24dp"
                            android:layout_height="24dp"
                            android:layout_gravity="center_vertical"
                            android:layout_marginLeft="8dp"
                            android:layout_marginRight="8dp"
                            android:scaleType="centerInside"
                            app:srcCompat="@drawable/ic_baseline_password_24" />

                        <com.google.android.material.textfield.TextInputLayout
                            android:id="@+id/etPasswordLayout"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:textColorHint="@color/white"
                            app:hintTextColor="@color/gray_400"
                            app:passwordToggleEnabled="true"
                            app:passwordToggleTint="@color/white">

                            <androidx.appcompat.widget.AppCompatEditText
                                android:id="@+id/etPassword"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:cursorVisible="true"
                                android:focusable="true"
                                android:focusableInTouchMode="true"
                                android:hint="@string/password"
                                android:inputType="textPassword"
                                android:textColor="@color/black" />

                            <!--android:text="pathway"-->
                        </com.google.android.material.textfield.TextInputLayout>


                    </LinearLayout>

                    <!--                        registration layout-->


                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="12dp"
                        android:layout_marginTop="4dp"
                        android:layout_marginEnd="12dp">


                        <TextView
                            android:id="@+id/forgetPasswordText"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignParentEnd="true"
                            android:padding="16dp"
                            android:text="@string/forgot_password"
                            android:textColor="@color/white"
                            android:textSize="16sp" />


                    </RelativeLayout>

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="8dp">

                        <TextView
                            android:id="@+id/changePasswordText"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignParentEnd="true"
                            android:layout_gravity="end"
                            android:layout_marginEnd="0dp"
                            android:gravity="end"
                            android:padding="16dp"
                            android:text="@string/change_password"
                            android:textColor="@color/white"
                            android:textSize="16sp"
                            android:visibility="gone" />


                    </RelativeLayout>


                    <LinearLayout
                        android:id="@+id/btnLogin"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="12dp"
                        android:layout_marginTop="24dp"
                        android:layout_marginEnd="12dp">
                        <!--                    android:layout_alignParentEnd="true"-->
                        <!--                    android:layout_centerInParent="true"-->

                        <androidx.cardview.widget.CardView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_margin="4dp"
                            android:backgroundTint="@color/black_900"
                            app:cardCornerRadius="12dp">

                            <LinearLayout
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_margin="8dp"
                                android:gravity="center"
                                android:orientation="vertical">

                                <TextView
                                    android:id="@+id/cropToGrow"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_marginStart="16dp"
                                    android:layout_marginEnd="16dp"
                                    android:gravity="center"
                                    android:padding="4dp"
                                    android:text="@string/login"
                                    android:textColor="@android:color/white"
                                    android:textSize="16sp"
                                    android:textStyle="bold" />


                            </LinearLayout>
                        </androidx.cardview.widget.CardView>

                    </LinearLayout>


                </androidx.appcompat.widget.LinearLayoutCompat>

            </androidx.appcompat.widget.LinearLayoutCompat>


        </androidx.appcompat.widget.LinearLayoutCompat>


    </ScrollView>




</RelativeLayout>