<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout

    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:openDrawer="start">

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".main.MainActivity">


        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:contentDescription="@string/floating_action_button"
            android:backgroundTint="@color/yellow"
            app:layout_anchorGravity="center_horizontal"
            app:backgroundTint="@color/white"
            app:layout_anchor="@id/bottomRl"
            android:src="@drawable/ic_baseline_ac_unit_24"
            android:id="@+id/fab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>


        <androidx.appcompat.widget.LinearLayoutCompat
            android:background="@android:color/black"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_behavior="@string/appbar_scrolling_view_behavior"
            tools:showIn="@layout/app_bar_main">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <androidx.appcompat.widget.LinearLayoutCompat
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:orientation="vertical">


                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="end"
                        android:text="MI"
                        android:textColor="@color/primary" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="end"
                        android:text="0.0"
                        android:textColor="@color/white" />


                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="end"
                        android:text="TIS"
                        android:textColor="@color/primary" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="end"
                        android:text="0.0"
                        android:textColor="@color/white" />


                    <TextView
                        android:textSize="12sp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="end"
                        android:text="Frame rate"
                        android:textColor="@color/primary" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="end"
                        android:text="0Hz"
                        android:textColor="@color/white" />


                </androidx.appcompat.widget.LinearLayoutCompat>



                <!--        full screen icon -->
                <ImageView
                    android:id="@+id/fullScreenImage"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_above="@+id/bottomRl"
                    android:layout_alignParentEnd="true"
                    android:layout_marginBottom="48dp"
                    android:contentDescription="@string/full_screen"
                    android:foregroundGravity="bottom"
                    android:src="@drawable/ic_baseline_fullscreen_24" />


                <RelativeLayout
                    android:id="@+id/bottomRl"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"
                    android:layout_gravity="bottom"
                    android:background="@color/primary"
                    android:padding="32dp">

                    <androidx.appcompat.widget.LinearLayoutCompat
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentStart="true"
                        android:layout_centerInParent="true"
                        android:layout_marginStart="32dp"
                        android:orientation="vertical">


                        <ImageView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:contentDescription="@string/annotate"
                            android:foregroundGravity="center"
                            android:src="@drawable/ic_baseline_keyboard_24" />


                        <androidx.appcompat.widget.AppCompatTextView
                            android:id="@+id/annotation"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            android:text="@string/annotate"
                            android:textColor="@color/white"
                            android:textSize="12sp" />

                    </androidx.appcompat.widget.LinearLayoutCompat>


                    <androidx.appcompat.widget.LinearLayoutCompat
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerInParent="true"
                        android:layout_marginStart="32dp"
                        android:layout_marginTop="32dp"
                        android:layout_marginEnd="32dp"
                        android:layout_marginBottom="32dp"
                        android:orientation="vertical">


                        <ImageView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:contentDescription="@string/annotate"
                            android:foregroundGravity="center"
                            android:src="@drawable/ic_baseline_linked_camera_24" />


                        <androidx.appcompat.widget.AppCompatTextView
                            android:id="@+id/saveImage"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            android:paddingTop="12dp"
                            android:text="@string/save_image"
                            android:textColor="@color/white"
                            android:textSize="12sp" />

                    </androidx.appcompat.widget.LinearLayoutCompat>


                    <!--<androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/saveImage"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerInParent="true"
                        android:drawablePadding="8dp"
                        android:gravity="center"
                        android:text="@string/save_image"
                        android:textColor="@color/white"
                        app:drawableTopCompat="@drawable/ic_baseline_linked_camera_24" />-->


                    <androidx.appcompat.widget.LinearLayoutCompat
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentEnd="true"
                        android:layout_centerInParent="true"
                        android:layout_marginEnd="32dp"
                        android:orientation="vertical">


                        <!--<ImageView
                            android:layout_width="16dp"
                            android:layout_height="16dp"
                            android:contentDescription="@string/measure"
                            android:src="@android:drawable/ic_media_ff" />-->


                        <ImageView
                            android:layout_width="24dp"
                            android:layout_height="24dp"
                            android:layout_gravity="center"
                            android:contentDescription="@string/measure"
                            android:src="@drawable/ic_baseline_arrow_drop_up_24" />

                        <ImageView
                            android:src="@drawable/ic_ruler_measure"
                            android:id="@+id/measure"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            />


                        <androidx.appcompat.widget.AppCompatTextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            android:text="@string/measure"
                            android:textColor="@color/white"
                            android:textSize="12sp" />

                    </androidx.appcompat.widget.LinearLayoutCompat>


                </RelativeLayout>


            </RelativeLayout>















        </androidx.appcompat.widget.LinearLayoutCompat>






    </androidx.coordinatorlayout.widget.CoordinatorLayout>

    <com.google.android.material.navigation.NavigationView
        android:background="@color/gray_400"
        android:id="@+id/nav_view"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:fitsSystemWindows="true"
        app:menu="@menu/activity_main_drawer" />
</androidx.drawerlayout.widget.DrawerLayout>